packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/graph_neighbors_markdown_analysis_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "center": {
    "distance": 0,
    "id": "main/docs/index.md#document",
    "isCenter": true,
    "label": "index.md",
    "nodeType": "doc",
    "path": "main/docs/index.md"
  },
  "links": [
    {
      "direction": "outgoing",
      "distance": 1,
      "source": "main/docs/index.md#document",
      "target": "main/docs/index.md#section:overview"
    },
    {
      "direction": "next_step",
      "distance": 2,
      "source": "main/docs/index.md#section:overview",
      "target": "main/docs/index.md#task:1"
    }
  ],
  "nodes": [
    {
      "distance": 0,
      "id": "main/docs/index.md#document",
      "isCenter": true,
      "label": "index.md",
      "nodeType": "doc",
      "path": "main/docs/index.md"
    },
    {
      "distance": 1,
      "id": "main/docs/index.md#section:overview",
      "isCenter": false,
      "label": "Overview",
      "nodeType": "doc",
      "path": "main/docs/index.md"
    },
    {
      "distance": 2,
      "id": "main/docs/index.md#task:1",
      "isCenter": false,
      "label": "Finish gateway fallback",
      "nodeType": "knowledge",
      "path": "main/docs/index.md"
    }
  ],
  "totalLinks": 2,
  "totalNodes": 3
}
