packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/graph_node_neighbors.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/../../../tests/unit/gateway/studio/support.rs
expression: value
---
{
  "incoming": [],
  "name": "Alpha",
  "nodeId": "alpha.md",
  "nodeType": "doc",
  "outgoing": [
    "beta.md"
  ],
  "twoHop": [
    "gamma.md"
  ]
}
