packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/repo_analysis_import_query_core_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
assertion_line: 9
expression: value
---
{
  "repo_id": "alpha/repo",
  "imports": [
    {
      "repo_id": "alpha/repo",
      "module_id": "module:BaseModelica",
      "import_name": "solve",
      "target_package": "SciMLBase",
      "source_module": "BaseModelica",
      "kind": "reexport",
      "line_start": 1,
      "resolved_id": "symbol:solve"
    }
  ],
  "import_hits": [
    {
      "import": {
        "repo_id": "alpha/repo",
        "module_id": "module:BaseModelica",
        "import_name": "solve",
        "target_package": "SciMLBase",
        "source_module": "BaseModelica",
        "kind": "reexport",
        "line_start": 1,
        "resolved_id": "symbol:solve"
      },
      "score": 1.0,
      "rank": 1
    }
  ]
}
