packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/repo_doc_coverage_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "covered_symbols": 1,
  "docs": [
    {
      "doc_id": "repo:gateway-sync:doc:README.md",
      "format": "md",
      "path": "README.md",
      "repo_id": "gateway-sync",
      "title": "README.md"
    },
    {
      "doc_id": "repo:gateway-sync:doc:docs/solve.md",
      "format": "md",
      "path": "docs/solve.md",
      "repo_id": "gateway-sync",
      "title": "solve"
    }
  ],
  "module_id": "repo:gateway-sync:module:GatewaySyncPkg",
  "repo_id": "gateway-sync",
  "uncovered_symbols": 0
}
