packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/repo_example_search_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "examples": [
    {
      "example_id": "repo:gateway-sync:example:examples/solve_demo.jl",
      "path": "examples/solve_demo.jl",
      "repo_id": "gateway-sync",
      "summary": null,
      "title": "solve_demo"
    }
  ],
  "repo_id": "gateway-sync"
}
